# diff-match-patch-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: CMakeLists.txt  dmp.h
src/: CMakeLists.txt  dmp.c  dmp.h  dmp_pool.c  dmp_pool.h
test/: CMakeLists.txt  Makefile  dmp_test.c  dmp_test.h  dmp_test_internals.c
